implementacion de estructura

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Developer profile card Sebastian</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+
+<div class="card">
+    <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExNTVpbjQ4NjRqbTE4cG9sMDVtNmhoOWtxMXN4bzJ1ZTU4cHJoeWZybyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mviOBOrzMn6BYUdxvR/giphy.gif" alt="Sebastian peña">    
+    <h2>Johan Sebastian Peña Ordoñez</h2>
+    <div class="subtitle">Desarrollador</div>
+    <div class="location">Bogota D.C / Colombia</div>
+    <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quia deserunt amet ullam, ex dolor explicabo magni at laborum mollitia sint provident fugiat sit? Molestiae magnam vero non rem laudantium.</div>
+</div>
+<div class="tags">
+    <span>Java</span>
+    <span>Angular</span>
+    <span>QA</span>
+</div>
+<div class="socials">
+    <a href="">Facebook</a>
+    <a href="">Linkedin</a>
+    <a href="">GitHub</a>
+    <a href="">Instagram</a>
+</div>
+
 </body>
 </html>
