--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Johan Sebastian Peña Ordoñez</h2>
     <div class="subtitle">Desarrollador</div>
     <div class="location">Bogota D.C / Colombia</div>
-    <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quia deserunt amet ullam, ex dolor explicabo magni at laborum mollitia sint provident fugiat sit? Molestiae magnam vero non rem laudantium.</div>
+    <div class="description">Soy desarrollador web y automatizador de pruebas con un enfoque sólido en la calidad del software, la eficiencia y la mejora continua. Tengo experiencia en el desarrollo de aplicaciones web utilizando Angular y Java, así como en la automatización de pruebas con herramientas como Selenium y JUnit.git</div>
 </div>
 <div class="tags">
     <span>Java</span>
