Modificaion de archivos index.html style.css para su mejor vista

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <div class="location">Bogota D.C / Colombia</div>
     <div class="description">Soy desarrollador web y automatizador de pruebas con un enfoque sólido en la calidad del
         software, la eficiencia y la mejora continua. Tengo experiencia en el desarrollo de aplicaciones web utilizando
-        Angular y Java, así como en la automatización de pruebas con herramientas como Selenium y JUnit.git</div>
+        Angular y Java, así como en la automatización de pruebas con herramientas como Selenium y JUnit.</div>
 
 <div class="tags">
     <span>Java</span>
     <span>Angular</span>
     <span>QA</span>
 </div>
+
 <div class="socials">
     <a href="https://www.facebook.com/sebastian.pena.507464/">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHlvY2dheTQ5Y2htbWx2NXZtMWpjd2hyaXYxNWV0ZzVtOHJiM3U1dCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/pUAgNUnRUqxyx5PsHe/giphy.gif"   
@@ -41,7 +42,5 @@
             alt="Instagram" style="width: 65px;    height: 35px;" />
     </a>
 </div>
-
 </body>
-
 </html>
