--- a/index.html
+++ b/index.html
@@ -6,41 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer profile card Sebastian</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 </head>
 
-<div class="card">
-    <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExNTVpbjQ4NjRqbTE4cG9sMDVtNmhoOWtxMXN4bzJ1ZTU4cHJoeWZybyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mviOBOrzMn6BYUdxvR/giphy.gif"
-        alt="Sebastian peña" class="profile-img">
-    <h2>Johan Sebastian Peña Ordoñez</h2>
-    <div class="subtitle">Desarrollador</div>
-    <div class="location">Bogota D.C / Colombia</div>
-    <div class="description">Soy desarrollador web y automatizador de pruebas con un enfoque sólido en la calidad del
-        software, la eficiencia y la mejora continua. Tengo experiencia en el desarrollo de aplicaciones web utilizando
-        Angular y Java, así como en la automatización de pruebas con herramientas como Selenium y JUnit.</div>
+<body>
+    
+    <div class="card">
+        <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExNTVpbjQ4NjRqbTE4cG9sMDVtNmhoOWtxMXN4bzJ1ZTU4cHJoeWZybyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mviOBOrzMn6BYUdxvR/giphy.gif"
+            alt="Sebastian peña" class="profile-img">
+        <h2>Johan Sebastian Peña Ordoñez</h2>
+        <div class="subtitle">Desarrollador</div>
+        <div class="location"> <i class="bi bi-geo-alt-fill"></i> Bogotá D.C / Colombia.</div>
+        <div class="description">Apasionado por la tecnología, soy desarrollador web y automatizador de pruebas enfocado
+            en
+            entregar soluciones eficientes y de alta calidad. Tengo experiencia trabajando con Angular y Java, y
+            automatizando procesos con Selenium, JUnit y Git. Disfruto optimizar procesos y aportar valor real a los
+            equipos
+            de desarrollo.</div>
 
-<div class="tags">
-    <span>Java</span>
-    <span>Angular</span>
-    <span>QA</span>
-</div>
+        <div class="tags">
+            <span>Java</span>
+            <span>Angular</span>
+            <span>QA</span>
+        </div>
 
-<div class="socials">
-    <a href="https://www.facebook.com/sebastian.pena.507464/">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHlvY2dheTQ5Y2htbWx2NXZtMWpjd2hyaXYxNWV0ZzVtOHJiM3U1dCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/pUAgNUnRUqxyx5PsHe/giphy.gif"   
-            alt="facebook"  style="width: 36px;    height: 30px;"/>
-    </a>
-    <a href="https://www.linkedin.com/in/sebastian-penna-dev/">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNG1xeHpzYml3OTc1aWxnMmFzbWxpOTMyajdqbTEzdGRobmYzanMwNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/a9eTxCdJhDU98Jp79g/giphy.gif" 
-            alt="Linkedin"  style="width: 50px;    height: 28px;" />
-    </a>
-    <a href="https://github.com/SebasCodeDeveloper">
-        <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3cTJjbGs3dHN4eXl2ZGE4OGh5bTdyb2o3MDF5MndqeXh3NG55ZWM4eSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/9f8mk4P3X2Nvch1z2o/giphy.gif" 
-            alt="GitHub"  style="width: 42px;    height: 40px;" />
-    </a>
-    <a href="https://www.instagram.com/sebas.720.pdc/">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWI1anF4Zjh1dHNoeTE0enZ5NGU2bGxoZWRicHJnbXNqanZvcmkwZSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/Wu9Graz2W46frtHFKc/giphy.gif" 
-            alt="Instagram" style="width: 65px;    height: 35px;" />
-    </a>
-</div>
+        <div class="socials">
+            <a href="https://www.facebook.com/sebastian.pena.507464/">
+                <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHlvY2dheTQ5Y2htbWx2NXZtMWpjd2hyaXYxNWV0ZzVtOHJiM3U1dCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/pUAgNUnRUqxyx5PsHe/giphy.gif"
+                    alt="facebook" style="width: 36px;    height: 30px;" />
+            </a>
+            <a href="https://www.linkedin.com/in/sebastian-penna-dev/">
+                <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNG1xeHpzYml3OTc1aWxnMmFzbWxpOTMyajdqbTEzdGRobmYzanMwNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/a9eTxCdJhDU98Jp79g/giphy.gif"
+                    alt="Linkedin" style="width: 50px;    height: 28px;" />
+            </a>
+            <a href="https://github.com/SebasCodeDeveloper">
+                <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3cTJjbGs3dHN4eXl2ZGE4OGh5bTdyb2o3MDF5MndqeXh3NG55ZWM4eSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/9f8mk4P3X2Nvch1z2o/giphy.gif"
+                    alt="GitHub" style="width: 42px;    height: 40px;" />
+            </a>
+            <a href="https://www.instagram.com/sebas.720.pdc/">
+                <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWI1anF4Zjh1dHNoeTE0enZ5NGU2bGxoZWRicHJnbXNqanZvcmkwZSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/Wu9Graz2W46frtHFKc/giphy.gif"
+                    alt="Instagram" style="width: 65px;    height: 35px;" />
+            </a>
+        </div>
 </body>
+
 </html>
