--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             entregar soluciones eficientes y de alta calidad. Tengo experiencia trabajando con Angular y Java, y
             automatizando procesos con Selenium, JUnit y Git. Disfruto optimizar procesos y aportar valor real a los
             equipos
-            de desarrollo.</div>
+            de desarrollo.
+        </div>
 
         <div class="tags">
             <span>Java</span>
