Actualizacion de  correo  y de tamaño en vista movil

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     alt="Instagram" style="width: 65px;    height: 35px;" />
             </a>
             <div class="contact-btn">
-    <a href="mailto:sebastian@example.com">Contáctame</a>
+    <a href="mailto:sebatianpena950@gmail.com">Contáctame</a>
 </div>
         </div>
 </body>
