implementacion de carpeta img y mofidicicacion de archio

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    
+
     <div class="card">
         <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExNTVpbjQ4NjRqbTE4cG9sMDVtNmhoOWtxMXN4bzJ1ZTU4cHJoeWZybyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mviOBOrzMn6BYUdxvR/giphy.gif"
             alt="Sebastian peña" class="profile-img">
@@ -33,25 +33,29 @@
         </div>
 
         <div class="socials">
-            <a href="https://www.facebook.com/sebastian.pena.507464/">
+            <a href="https://www.facebook.com/sebastian.pena.507464/" target="_blank">
                 <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHlvY2dheTQ5Y2htbWx2NXZtMWpjd2hyaXYxNWV0ZzVtOHJiM3U1dCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/pUAgNUnRUqxyx5PsHe/giphy.gif"
                     alt="facebook" style="width: 36px;    height: 30px;" />
             </a>
-            <a href="https://www.linkedin.com/in/sebastian-penna-dev/">
+            <a href="https://www.linkedin.com/in/sebastian-penna-dev/" target="_blank">
                 <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNG1xeHpzYml3OTc1aWxnMmFzbWxpOTMyajdqbTEzdGRobmYzanMwNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/a9eTxCdJhDU98Jp79g/giphy.gif"
                     alt="Linkedin" style="width: 50px;    height: 28px;" />
             </a>
-            <a href="https://github.com/SebasCodeDeveloper">
+            <a href="https://github.com/SebasCodeDeveloper" target="_blank">
                 <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3cTJjbGs3dHN4eXl2ZGE4OGh5bTdyb2o3MDF5MndqeXh3NG55ZWM4eSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/9f8mk4P3X2Nvch1z2o/giphy.gif"
                     alt="GitHub" style="width: 42px;    height: 40px;" />
             </a>
-            <a href="https://www.instagram.com/sebas.720.pdc/">
+            <a href="https://www.instagram.com/sebas.720.pdc/" target="_blank"> 
                 <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWI1anF4Zjh1dHNoeTE0enZ5NGU2bGxoZWRicHJnbXNqanZvcmkwZSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/Wu9Graz2W46frtHFKc/giphy.gif"
-                    alt="Instagram" style="width: 65px;    height: 35px;" />
+                    alt="Instagram" style="width: 65px;    height: 35px;"/>
+            </a>
+            <a href="mailto:sebatianpena950@gmail.com" target="_blank">
+                <img src="img/gmail (1).gif"
+                    alt="Gmail" style="width: 35px;  height: 35px;" />
             </a>
             <div class="contact-btn">
-    <a href="mailto:sebatianpena950@gmail.com">Contáctame</a>
-</div>
+                <a href="mailto:sebatianpena950@gmail.com">Contáctame</a>
+            </div>
         </div>
 </body>
 
