implementacion de nueva seccion para las herramientas

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         </div>
 
         <div class="tags">
-            <span>Java</span>
-            <span>Angular</span>
-            <span>QA</span>
+            <p>Estas son algunas de las tecnologías con las que trabajo:</p>
+                <img  src="https://skillicons.dev/icons?i=angular,java,ts,js,html,css,git,github,selenium,npm,postgres,mysql,figma,nodejs,vscode,idea&perline=8" />
         </div>
 
         <div class="socials">
