--- a/index.html
+++ b/index.html
@@ -4,33 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer profile card Sebastian</title>
+    <title> DevProfileCard</title>
+    <link rel="shortcut icon" href="img/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
 </head>
 
 <body>
-
+    <!-- Div que contiene: imagen de la carta, nombre de la carta, subtitulo de la carta, ubicacion de la carta y descripcion de la carta -->
     <div class="card">
         <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExNTVpbjQ4NjRqbTE4cG9sMDVtNmhoOWtxMXN4bzJ1ZTU4cHJoeWZybyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mviOBOrzMn6BYUdxvR/giphy.gif"
             alt="Sebastian peña" class="profile-img">
         <h2>Johan Sebastian Peña Ordoñez</h2>
-        <div class="subtitle">Desarrollador</div> 
+        <div class="subtitle">Desarrollador Web</div>
         <div class="location"> <i class="bi bi-geo-alt-fill"></i> Bogotá D.C / Colombia.</div>
-        <div class="description">Apasionado por la tecnología, soy desarrollador web y automatizador de pruebas enfocado
-            en
-            entregar soluciones eficientes y de alta calidad. Tengo experiencia trabajando con Angular y Java, y
-            automatizando procesos con Selenium, JUnit y Git. Disfruto optimizar procesos y aportar valor real a los
-            equipos
-            de desarrollo.
+        <div class="description">Apasionado por la tecnología, soy desarrollador web y especialista en automatización de
+            pruebas, enfocado en entregar soluciones eficientes y de alta calidad. Tengo experiencia con tecnologías
+            como Angular y Java, así como en la automatización de procesos usando Selenium, JUnit y Git. Disfruto
+            optimizar flujos, resolver problemas y aportar valor real a los equipos de desarrollo.
         </div>
 
+        <!-- Div que contiene las Skills  => habilidades de lenguaje en img -->
         <div class="tags">
             <p>Estas son algunas de las tecnologías con las que trabajo:</p>
-                <img  src="https://skillicons.dev/icons?i=angular,java,ts,js,html,css,git,github,selenium,npm,postgres,mysql,figma,nodejs,vscode,idea&perline=8" />
+            <img
+                src="https://skillicons.dev/icons?i=angular,java,ts,js,html,css,git,github,selenium,npm,postgres,mysql,figma,nodejs,vscode,idea&perline=8" />
         </div>
 
+        <!-- Div que contiene los iconos de las redes sociales y el boton de contacto -->
         <div class="socials">
             <a href="https://www.facebook.com/sebastian.pena.507464/" target="_blank">
                 <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHlvY2dheTQ5Y2htbWx2NXZtMWpjd2hyaXYxNWV0ZzVtOHJiM3U1dCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/pUAgNUnRUqxyx5PsHe/giphy.gif"
@@ -44,16 +45,15 @@
                 <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3cTJjbGs3dHN4eXl2ZGE4OGh5bTdyb2o3MDF5MndqeXh3NG55ZWM4eSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/9f8mk4P3X2Nvch1z2o/giphy.gif"
                     alt="GitHub" style="width: 42px;    height: 40px;" />
             </a>
-            <a href="https://www.instagram.com/sebas.720.pdc/" target="_blank"> 
+            <a href="https://www.instagram.com/sebas.720.pdc/" target="_blank">
                 <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWI1anF4Zjh1dHNoeTE0enZ5NGU2bGxoZWRicHJnbXNqanZvcmkwZSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/Wu9Graz2W46frtHFKc/giphy.gif"
-                    alt="Instagram" style="width: 65px;    height: 35px;"/>
+                    alt="Instagram" style="width: 65px;    height: 35px;" />
             </a>
-            <a href="mailto:sebatianpena950@gmail.com" target="_blank"> 
-                <img src="img/gmail (1).gif"
-                    alt="Gmail" style="width: 29px;  height: 30px;" />
+            <a href="mailto:sebatianpena950@gmail.com" target="_blank">
+                <img src="img/Gmail.gif" alt="Gmail" style="width: 29px;  height: 30px;" />
             </a>
             <div class="contact-btn">
-                <a href="mailto:sebatianpena950@gmail.com">Contáctame</a> 
+                <a href="mailto:sebatianpena950@gmail.com">Contáctame</a>
             </div>
         </div>
 </body>
